<resources>
    <string name="app_name">SematecProject</string>
    <string name="name">NAME</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_family">Please Enter Your Family</string>
    <string name="please_enter_your_age">Please Enter Your Age</string>
    <string name="ok">OK</string>
    <string name="hi">HI</string>
</resources>
