<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">



    <TextView
        android:background="#ffff55"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textSize="30dp"
        android:textColor="#ff0000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Pesrsonal Informations"/>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:background="#4060f9"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="85dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/txtName"
            android:hint="@string/please_enter_your_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:background="#4060f9"
            android:text="FAMILY"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="85dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/txtFamily"
            android:hint="@string/please_enter_your_family"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:background="#4060f9"
            android:text="AGE"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="85dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/numAge"
            android:hint="@string/please_enter_your_age"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:background="#4060f9"
            android:text="EMAIL"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="85dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/txtEmail"
            android:hint="Please Enter Your Email Address"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:background="#4060f9"
            android:text="PHONE"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_width="85dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/numPhone"
            android:hint="Please Enter Your Phone Number"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:text="@string/ok"
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>